--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <%= image_pack_tag('media/images/autumn.jpg', class: "image") %>
+  <%= image_pack_tag('media/images/winter_apple.png', class: "image") %>
   <%unless @is_raining%>
   <div class="rains">
     <span></span><span></span><span></span><span></span><span></span>
