--- a/app/javascript/packs/application.scss
+++ b/app/javascript/packs/application.scss
@@ -12,6 +12,25 @@ body {
   object-fit: cover;
   overflow: hidden;
 }
+.cloud1 {
+  top: 15%;
+  left: 1%;
+  opacity: 0.2;
+  position: fixed;
+  width: 70%;
+  object-fit: cover;
+  overflow: hidden;
+}
+
+.cloud2 {
+  top: 25%;
+  right: 1%;
+  opacity: 0.2;
+  position: fixed;
+  width: 75%;
+  object-fit: cover;
+  overflow: hidden;
+}
 
 .container{
   top: 0;
@@ -24,6 +43,7 @@ body {
   width: 100%;
   height:100vh;
   overflow: hidden;
+  text-align: center;
 }
 
 .container p{
