--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,12 @@
   <head>
     <title>Portfolio</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta property="og:title" content="風信坊">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="風信坊.com">
+    <meta property="og:description" content="雨の日は雨が降り、雪の日は雪が降り、曇りの日は雲が出ます。">
+    <meta property="og:image" content="media/images/blue_apple.jpg">
+    <meta name="twitter:card" content="summary_large_image">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
