--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -12,6 +12,14 @@
     <span></span><span></span><span></span><span></span><span></span>
   </div>
   <%end%>
+  <%if @is_snowing%>
+  <div class="snows">
+    <span></span><span></span><span></span><span></span><span></span>
+    <span></span><span></span><span></span><span></span><span></span>
+    <span></span><span></span><span></span><span></span><span></span>
+    <span></span><span></span><span></span><span></span><span></span>
+  </div>
+  <%end%>
   <div class="api-test">
     <%=%>
   </div>
