ogpに画像が反映されるようにした

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Portfolio</title>
+    <title>風信坊.com</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta property="og:title" content="風信坊">
+    <meta property="og:title" content="風信坊.com">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="風信坊.com">
     <meta property="og:description" content="雨の日は雨が降り、雪の日は雪が降り、曇りの日は雲が出ます。">
-    <meta property="og:image" content="media/images/blue_apple.jpg">
+    <meta property="og:image" content="http://www.fushinbo.com/blue_apple.jpg">
     <meta name="twitter:card" content="summary_large_image">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
