--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="風信坊.com">
     <meta property="og:description" content="雨の日は雨が降り、雪の日は雪が降り、曇りの日は雲が出ます。">
-    <meta property="og:image" content="http://www.fushinbo.com/blue_apple.jpg">
+    <meta property="og:image" content="http://www.fushinbo.com/blue_apple.png">
     <meta name="twitter:card" content="summary_large_image">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
