--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -5,6 +5,7 @@
   <%end%>
   <%if @is_clear%>
   <%= image_pack_tag('media/images/sky_apple.png', class: "image") %>
+  <%= image_pack_tag('media/images/air_plain.png', class: "air-plain") %>
   <%else%>
   <%= image_pack_tag('media/images/winter_apple_skelton.png', class: "image") %>
   <%end%>
