--- a/app/javascript/packs/application.scss
+++ b/app/javascript/packs/application.scss
@@ -3,6 +3,83 @@ body {
   width: 100%;
 }
 
+.quiz {
+  z-index: 10;
+  position: absolute;
+  top: 1%;
+  display: inline-block;
+  left: 3%;
+  text-align: left;
+  opacity: 0;
+  animation: question-fade-in 3s;
+  animation-fill-mode: forwards;
+}
+.quiz:hover {
+  cursor: pointer;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0);
+  transition: background-color 1s;
+  z-index: 20;
+}
+
+.modal-content {
+  background-color: #f4f4f4;
+  margin: 10% auto;
+  padding: 3% 3% 1% 3%;
+  width: 70%;
+  box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2),0 7px 20px 0 rgba(0,0,0,0.17);
+  border-radius: 5px;
+  opacity: 0;
+  transition: opacity 1s;
+}
+
+.number {
+  margin: 0% 2%;
+  font-size:3rem;
+}
+
+.form {
+  margin-top: 3%;
+}
+
+.form-item {
+  font-size:2rem;
+  max-width: 50%;
+}
+
+@keyframes modal-bg {
+  from {opacity: 0}
+  to {opacity: 1; background-color: rgba(0,0,0,0.5);}
+}
+
+@keyframes modalopen {
+  from {opacity: 0}
+  to {opacity: 1;}
+}
+
+.modalClose {
+  right: 3%;
+  font-size: 2rem;
+  text-align: right;
+  margin-top: 5%;
+  display: inline-block;
+}
+
+.modalClose:hover {
+  cursor: pointer;
+}
+
+
 .image {;
   position: fixed;
   top: 0;
@@ -57,15 +134,6 @@ body {
   overflow: hidden;
   text-align: center;
 }
-
-.container p{
-  padding:20px;
-  margin:0;
-  font-size:40px;
-  font-weight: bold;
-  color:#FFF;
-}
-
 .rains{
   position: absolute;
   left:0;
@@ -271,6 +339,25 @@ body {
     transform: translateX(-11000%);
   }
 }
+
+@keyframes question-fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 100;
+  }
+}
+
+@keyframes question-fade-out {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 100;
+  }
+}
+
 
 // .cloudy-images {
 //   animation: loop 3s linear infinite;
