--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -44,7 +44,7 @@
       e.target.classList.remove("clicked");
       e.target.style.opacity = 0;
     } else {
-      e.classList.add("clicked");
+      e.target.classList.add("clicked");
       e.target.style.opacity = 1;
     }
   };
