一部要素をクリック不可にした

--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -11,7 +11,7 @@
   <%end%>
   <%= image_pack_tag('media/images/real_apple_kurinuki.png', id: "appleClicked", class: "real-apple image") %>
   <%if @is_cherry_bllosoming%>
-  <%= image_pack_tag('media/images/cherry_blossom.gif', class: "image")%>
+  <%= image_pack_tag('media/images/cherry_blossom.gif', class: "cherry_blossom image")%>
   <%end%>
   <%if @is_raining%>
   <div class="rains">
