--- a/app/javascript/packs/application.scss
+++ b/app/javascript/packs/application.scss
@@ -44,6 +44,10 @@ body {
   animation: air-plain-loop 70s linear infinite;
 }
 
+.cherry_blossom {
+  pointer-events: none;
+}
+
 .container{
   top: 0;
   left: 0;
@@ -73,6 +77,7 @@ body {
   width: 100%;
   height:100%;
   transform: rotate(20deg);
+  pointer-events: none;
 }
 
 .rains span{
@@ -88,6 +93,7 @@ body {
   top:-20px;
   width: 100%;
   height:100%;
+  pointer-events: none;
 }
 
 .snows span{
@@ -276,17 +282,3 @@ body {
     transform: translateX(-11000%);
   }
 }
-
-// .cloudy-images {
-//   animation: loop 3s linear infinite;
-// }
-
-// .bg_test {
-//   width: 100%;
-//   min-height: 100vh;
-//   background-image: url('images/gifteeColor1.jpg');    /* 背景画像指定 */
-// }
-// .test {
-//   font-size: 90px;
-//   background-image: url('images/gifteeColor1.jpg');
-// }
